--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: Stem-Regular;
     font-size: 25px;
-    line-height: 150%;
 }
 
 header {
@@ -18,6 +17,7 @@ header {
 
 .fond {
     z-index: 1;
+    width: 985px;
 }
 
 .title {
@@ -213,11 +213,45 @@ span {
 }
 
 @media (max-width: 400px) {
+    header {
+        padding-top: 57px;
+        padding-bottom: 57px;
+    }
+    .inf-2 {
+        padding-bottom: 30px;
+        font-size: 19.3722px;
+        line-height: 27px;
+    }
+    .list-group>.list-group-item {
+        border: none;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .bar {
+        width: 85.21px;
+        height: 17.79px;
+        padding-bottom: 56px;
+        z-index: 2;
+    }
+    .bar-2 {
+        width: 101.76px;
+        height: 16.96px;
+        z-index: 2;
+    }
+    .bar-3 {
+        width: 66.51px;
+        height: 27.71px;
+        z-index: 2;
+    }
     span {
         font-size: 8px;
     }
     .date {
         font-size: 14.6601px;
+        padding-top: 338px;
+    }
+    .fond {
+        width: 682px;
     }
     .text-37-1 {
         font-size: 19px;
@@ -233,8 +267,8 @@ span {
         padding: 2.77px 13.39px 1.85px 13.39px;
     }
     .container-fluid {
-        padding-left: 23px;
-        padding-right: 23px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .title {
         font-size: 32px;
@@ -244,16 +278,16 @@ span {
     }
     .content {
         padding-top: 45px;
-        padding-left: 23px;
-        padding-right: 23px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .row1 {
         padding-top: 19px;
     }
     .cont-2 {
         padding-top: 48px;
-        padding-left: 23px;
-        padding-right: 23px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .img-1 {
         padding-top: 26px;
@@ -263,23 +297,23 @@ span {
         font-size: 19px;
     }
     .text-34 {
-        font-size: 14px;
+        font-size: 15px;
     }
     .text-34-1 {
-        font-size: 14px;
+        font-size: 15px;
         padding-top: 37px;
     }
     .cont-3 {
         padding-top: 45px;
         padding-bottom: 37px;
-        padding-left: 23px;
-        padding-right: 23px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .cont-4 {
         padding-top: 43px;
         padding-bottom: 43px;
-        padding-left: 23px;
-        padding-right: 23px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .sub-cont {
         padding-top: 32px;
@@ -308,11 +342,12 @@ span {
         padding-right: 30px;
     }
     .sub-cont-2 {
-        padding-top: 90px;
+        padding-top: 26px;
+    }
+    .img-log {
+        width: 130.21px;
     }
     footer {
-        padding-left: 23px;
-        padding-right: 23px;
         font-size: 11px;
         padding-top: 31px;
         padding-bottom: 31px;
@@ -328,9 +363,36 @@ span {
 }
 
 @media (min-width: 401px) and (max-width: 834px) {
+    .i {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .bar {
+        width: 148.06px;
+        height: 30.91px;
+        padding-bottom: 56px;
+        z-index: 2;
+    }
+    .bar-2 {
+        width: 176.81px;
+        height: 29.47px;
+        z-index: 2;
+    }
+    .bar-3 {
+        width: 115.56px;
+        height: 48.16px;
+        z-index: 2;
+    }
     .inf {
         width: 379px;
         font-size: 16px;
+        padding-top: 15px;
+        padding-bottom: 106px;
+        line-height: 24px;
+    }
+    .fond {
+        width: 717px;
     }
     span {
         font-size: 8px;
@@ -348,11 +410,11 @@ span {
         padding: 2.77px 13.39px 1.85px 13.39px;
     }
     .container-fluid {
-        padding-left: 60px;
-        padding-right: 60px;
+        padding-right: 24px;
     }
     .title {
         font-size: 50px;
+        line-height: 65px;
     }
     .text-25 {
         font-size: 15px;
@@ -441,25 +503,13 @@ span {
 }
 
 @media (min-width: 835px) and (max-width: 1919px) {
-    .inf {
-        font-size: 16px;
-    }
-    span {
-        font-size: 8px;
-    }
     .text-37-1 {
         font-size: 35px;
-    }
-    .text-25 {
-        font-size: 22px;
     }
     .text-37 {
         font-size: 35px;
     }
     .text-34 {
-        font-size: 30px;
-    }
-    .text-34-1 {
         font-size: 30px;
     }
     .bt-white {
@@ -468,7 +518,6 @@ span {
         border: 1.5px solid #FFFFFF;
         box-sizing: border-box;
         border-radius: 24.7431px;
-        font-size: 20px;
         padding: 2.3px 10.9px 1.72px 10.33px;
     }
     .img-3 {
