--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 's';
-    src: url(../fnt/Stem-Regular.woff2) format('woff2'), url(../fnt/Stem-Regular.woff) format('woff');
+    src: url(/fnt/Stem-Regular.woff2) format('woff2'), url(/fnt/Stem-Regular.woff) format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'sm';
-    src: url(../fnt/Stem-Medium.woff2) format('woff2'), url(../fnt/Stem-Medium.woff) format('woff');
+    src: url(/fnt/Stem-Medium.woff2) format('woff2'), url(/fnt/Stem-Medium.woff) format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'sn';
-    src: url(../fnt/Stem-Bold.woff2) format('woff2'), url(../fnt/Stem-Bold.woff) format('woff');
+    src: url(/fnt/Stem-Bold.woff2) format('woff2'), url(/fnt/Stem-Bold.woff) format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap
