--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,19 @@ span {
     padding-top: 90px;
 }
 
+.d-1 {
+    padding-bottom: 13px;
+}
+
+.d-2 {
+    padding-top: 10px;
+}
+
+.down {
+    font-size: 18px;
+    margin-bottom: 0rem;
+}
+
 @media (max-width: 400px) {
     header {
         padding-top: 57px;
@@ -275,7 +288,9 @@ span {
         padding-top: 338px;
     }
     .fond {
-        width: 682px;
+        width: 566px;
+        height: 519px;
+        object-fit: cover;
     }
     .text-37-1 {
         font-size: 19px;
@@ -384,9 +399,17 @@ span {
     .gx-2 {
         --bs-gutter-x: 2rem;
     }
+    .img-3 {
+        width: 318px;
+        height: auto;
+    }
 }
 
 @media (min-width: 401px) and (max-width: 834px) {
+    header {
+        padding-top: 50px;
+        padding-bottom: 70px;
+    }
     .i {
         display: flex;
         justify-content: center;
@@ -395,7 +418,7 @@ span {
     .bar {
         width: 148.06px;
         height: 30.91px;
-        padding-bottom: 56px;
+        padding-bottom: 102px;
         z-index: 2;
     }
     .bar-2 {
@@ -412,11 +435,13 @@ span {
         width: 379px;
         font-size: 16px;
         padding-top: 15px;
-        padding-bottom: 106px;
+        padding-bottom: 200px;
         line-height: 24px;
     }
     .fond {
-        width: 717px;
+        width: auto;
+        height: 659px;
+        object-fit: cover;
     }
     span {
         font-size: 8px;
@@ -442,7 +467,7 @@ span {
         line-height: 65px;
     }
     .text-25 {
-        font-size: 15px;
+        font-size: 14px;
     }
     .content {
         padding-top: 45px;
@@ -519,11 +544,25 @@ span {
     }
     .img-3 {
         width: 347px;
-        height: 506px;
+        height: auto;
     }
     .img-log {
         width: 102px;
         height: 21px;
+    }
+    .d-1 {
+        padding-bottom: 13px;
+        padding-left: 97px;
+    }
+    .img-vk {
+        width: 18px;
+    }
+    .img-fb {
+        width: 8px;
+    }
+    .down {
+        font-size: 11px;
+        margin-bottom: 0rem;
     }
 }
 
@@ -542,10 +581,17 @@ span {
         background: #FFFFFF;
         border: 1.5px solid #FFFFFF;
         box-sizing: border-box;
+        font-size: 22px;
         border-radius: 24.7431px;
         padding: 2.3px 10.9px 1.72px 10.33px;
     }
     .img-3 {
         height: 760px;
+    }
+    .d-1 {
+        padding-bottom: 13px;
+    }
+    .d-2 {
+        padding-top: 10px;
     }
 }
