--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,8 @@ header {
 }
 
 .date-2 {
+    margin-left: 5px;
+    margin-top: 9px;
     background: #FFCB08;
     border: 2px solid #FFCB08;
     box-sizing: border-box;
@@ -168,7 +170,7 @@ span {
 
 .g-5,
 .gx-5 {
-    --bs-gutter-x: 15rem;
+    --bs-gutter-x: 8rem;
 }
 
 .g-2,
@@ -225,6 +227,7 @@ span {
     background-color: #FFCB08;
     border-bottom: 2px solid rgba(7, 0, 0, 0.781);
     padding-left: 0%;
+    padding-bottom: 24px;
 }
 
 .number {
@@ -249,7 +252,11 @@ span {
     margin-bottom: 0rem;
 }
 
-@media (max-width: 400px) {
+.space-1 {
+    padding-top: 75px;
+}
+
+@media (max-width: 767px) {
     header {
         padding-top: 57px;
         padding-bottom: 57px;
@@ -343,10 +350,10 @@ span {
         padding-top: 37px;
     }
     .cont-3 {
-        padding-top: 45px;
         padding-bottom: 37px;
         padding-left: 30px;
         padding-right: 30px;
+        padding-top: 15px;
     }
     .cont-4 {
         padding-top: 43px;
@@ -402,10 +409,24 @@ span {
     .img-3 {
         width: 318px;
         height: auto;
+        margin-bottom: 26px;
+    }
+    .cont-7 {
+        margin-top: 18px;
+    }
+    .cont-8 {
+        margin-top: 8px;
+        margin-bottom: 10px;
+    }
+    .cont-9 {
+        margin-bottom: 13px;
     }
 }
 
-@media (min-width: 401px) and (max-width: 834px) {
+@media (min-width: 768px) and (max-width: 834px) {
+    .space-1 {
+        padding-top: 75px;
+    }
     header {
         padding-top: 50px;
         padding-bottom: 70px;
@@ -552,7 +573,7 @@ span {
     }
     .d-1 {
         padding-bottom: 13px;
-        padding-left: 97px;
+        padding-left: 0px;
     }
     .img-vk {
         width: 18px;
@@ -563,6 +584,12 @@ span {
     .down {
         font-size: 11px;
         margin-bottom: 0rem;
+    }
+    .cont-5 {
+        margin-top: 18px;
+    }
+    .cont-6 {
+        margin-top: 10px;
     }
 }
 
@@ -593,5 +620,8 @@ span {
     }
     .d-2 {
         padding-top: 10px;
+    }
+    .space-1 {
+        padding-top: 160px;
     }
 }
